--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
+    "deploy": "rsync -avz --progress ./out/* root@dayjs.palhari.dev:/home/pedro/dayjs",
     "start": "next start",
     "lint": "next lint"
   },
